--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "npm:dart-sass@^1.25.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-json-view": "^1.21.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4"
