--- a/public/data/project.json
+++ b/public/data/project.json
@@ -6,14 +6,14 @@
             "id": 1,
             "name": "GSL3",
             "platform": "x86",
-            "updateTime": "2023-03-28 11:27:34",
+            "update_time": "2023-03-28 11:27:34",
             "maintainer": "tom"
         },
         {
             "id": 2,
             "name": "GSL4",
             "platform": "x86",
-            "updateTime": "2023-03-28 11:27:34",
+            "update_time": "2023-03-28 11:27:34",
             "maintainer": "tom"
         }
     ],
