--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "prettier": "prettier --write src/**/*.ts src/**/*.tsx src/**/*.js src/**/*.scss",
+    "prettier": "prettier --write src/**/*.ts src/**/*.tsx src/**/*.scss",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
