--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-json-view": "^1.21.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.6.1",
     "typescript": "^4.7.4"
   },
   "scripts": {
