--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "prettier": "^2.8.4"
-  }
+  },
+  "proxy": "http://172.16.18.123:9020"
 }
